--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
         <section id="contact">
             <h2>Contact me</h2>
             <p>
-                I'm always interested in hearing about new teaching opportunities,
-                writing curricula, or instructional design work.
+                I'm always interested in hearing about new opportunities.
             </p>
             <p><a href="mailto:emadmahfouz8811@gmail.com" class="button">Email me</a></p>
         </section>
