--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
             </li>
 
             <li>
-                <a href="https://docs.google.com/document/d/1pb4rNcGvRIULSrgbfNcKn7JrrvuDiQ2PU5n3UYOUbE4/edit?usp=sharing"
+                <a href="https://drive.google.com/file/d/1Aqxr37W94K3JnAibZ8WQ9iCdorYASAKL/view?usp=sharing"
                     target="_blank" class="button">Resume</a>
             </li>
         </ul>
@@ -57,14 +57,14 @@
                     <br>
                     <h4>Achievements</h4>
                     <p class="blackbox">
-                        - Participated in the 2022 Egyptian Collegiate Programming Contest.<br>
-                        - Coach in 2022 Egyptian Teens Programming Contest | 6 teams. <br>
-                        - 1st Place in the 2022 MAM Collegiate Programming Contest | 39 teams participated. <br>
-                        - 273rd Place in the 2022 ACPC Kickoff Individual Contest | 800 teams participated. <br>
-                        - Participated in Meta Hacker Cup 2022.<br>
-                        - 9th place in the semicolon show IEEE Al-Azhar University<br>
-                        - Participated in the 2021 Egyptian Collegiate Programming Contest.<br>
-                        - 1st Place in the 2021 MAM Collegiate Programming Contest | 16 teams participated. <br>
+                        • Judge for the 2024 Egyptian Collegiate Programming Contest.<br>
+                        • 100th Place in the 2023 Africa and Arab Collegiate Programming Contest. <br>
+                        • 3x ECPC (Egyptian Collegiate Programming Contest) finalist. <br>
+                        • 1st Place in the MAM Collegiate Programming Contest (2021, 2022, 2023) . <br>
+                        • 273rd Place in the 2022 ACPC Kickoff Individual Contest | 800 teams participated. <br>
+                        • Participated in Meta Hacker Cup 2022.<br>
+                        • 20th Place in OSC Hotaru 1.0 Programming Contest | 120 teams participated.<br>
+                        • 9th place in the semicolon show IEEE Al-Azhar University<br>
                         Ref: For ICPC contributions: check:
                         <a href="https://icpc.global/ICPCID/76Q92CA656V9" target="_blank">full ICPC record</a>.
 
@@ -73,9 +73,21 @@
                     <h4>Projects</h4>
 
                     <p class="blackbox">
-                        - Tic-tac-toe game | AI in python | minimax algorithm. <br>
-                        - Library-Management-System | Java and Mysql. <br>
-                        - Travel-Agency-Management-System | C++ with OOP | File Handling.<br>
+                        Contest Control System | Graduation Project <br>
+                            • Designed to manage programming contests effectively while enhancing the integrity of competitive programming by ensuring unique submissions among participants. <br>
+                            • Contributed to the design and implementation of the database schema and developed a Similarity Checker tool using cosine similarity in Python to assess code submissions for plagiarism.<br>
+                            <br>
+                            Travel Agency Management System | C++ Project<br>
+                            • Developed a travel agency management system using C++ and Object-Oriented Programming (OOP) principles,
+                            incorporating file handling for managing customer data and generating receipts.<br>
+                            • The user-friendly interface facilitates travel service bookings and demonstrates the practical application of
+                            programming concepts, enhancing overall user experience through efficient data management.<br> <br>
+
+                            Library Management System | Java Project<br>
+• Developed a comprehensive library management system using Java, implementing Object-Oriented Programming
+(OOP) principles and utilizing MySQL for data storage.<br>
+• The system enables users to manage book inventories, handle user registrations, and facilitate the borrowing and
+returning of books, while employing design patterns to enhance architecture and ensure maintainability.<br><br>
                         Ref: <a href="https://github.com/EmaddMahfouz" target="_blank">GitHub</a>.
 
 
@@ -84,21 +96,18 @@
 
                     <p class="blackbox">
                         Problem solving mentor, April 2021 - present. <br>
-                        Teaching programming fundamentals in C++ and and problem-solving techniques to a group of mid
+                        • Teaching programming fundamentals in C++ and and problem-solving techniques to a group of mid
                         school students.<br>
-                        In 2022, they made it to ECPC teens 2022 and they were able to solve 2-3 problems.<br>
-                        Ref:
-                        <a href="https://www.linkedin.com/feed/update/urn:li:activity:6971404891873292288/" target="_blank">LinkedIn</a>.
-                        <br>
+                
                         <br>
                         <span> Modern Academy ACPC Community, Sep 2020 - present. <br> </span>
-                        - Putting training road-maps. <br>
-                        - Coaching and mentoring students. <br>
-                        - Explaining fundamentals of programming in C++. <br>
-                        - Explaining advanced data structures and algorithms. <br>
-                        - Explaining a lot of problem-solving techniques. <br>
-                        - Problem setting and judging contests. <br>
-                        - Handling logistics issues. <br>
+                        • Putting training road-maps. <br>
+                        • Coaching and mentoring students. <br>
+                        • Explaining fundamentals of programming in C++. <br>
+                        • Explaining advanced data structures and algorithms. <br>
+                        • Explaining a lot of problem-solving techniques. <br>
+                        • Problem setting and judging contests. <br>
+                        • Handling logistics issues. <br>
 
 
                     </p>
