--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://docs.google.com/document/d/1pb4rNcGvRIULSrgbfNcKn7JrrvuDiQ2PU5n3UYOUbE4/edit?usp=sharing"
+                <a href="https://drive.google.com/file/d/1Aqxr37W94K3JnAibZ8WQ9iCdorYASAKL/view?usp=sharing"
                     target="_blank" class="button">Resume</a>
             </li>
         </ul>
@@ -51,9 +51,9 @@
     <section id="intro">
         <p class="name">Hi, my name is <span>Emad Mahfouz.</span></p>
         <h2>Software Engineer.</h2>
-        <h3>2X ECPC Finalist.</h3>
+        <h3>ACPC Finalist.</h3>
         <p>
-            I'm a Student at Modern Academy Maadi | Modern Academy ICPC Community Co-Founder.
+            BSc in Computer Science | Ex SWE intern @ Valeo.
             <br> Algorithms is my way to
             become a good developer, solved 1000+ problems on different
             online judges like codeForces , codeChef , hackerRank and atCoder - Experience in C++ , Data structure and
@@ -63,7 +63,7 @@
             Ref: For ICPC contributions: check:
             <a href="https://icpc.global/ICPCID/76Q92CA656V9" target="_blank">full ICPC record</a>.
             CodeForces Handle:
-            <a href="https://codeforces.com/profile/EmadMahfouz" target="_blank">Emad Mahfouz</a>.
+            <a href="https://codeforces.com/profile/IImad" target="_blank">IImad</a>.
             CodeChef Handle:
             <a href="https://www.codechef.com/users/emad_mahfouz23" target="_blank">emad_mahfouz23</a>.
         </p>
@@ -78,14 +78,14 @@
                 <div class="text">
                     <h3>Just the highlights</h3>
                     <p class="blackbox">
-                        - Participated in the 2022 Egyptian Collegiate Programming Contest.<br>
-                        - Coach in 2022 Egyptian Teens Programming Contest | 6 teams. <br>
-                        - 1st Place in the 2022 MAM Collegiate Programming Contest | 39 teams participated. <br>
-                        - 273rd Place in the 2022 ACPC Kickoff Individual Contest | 800 teams participated. <br>
-                        - Participated in Meta Hacker Cup 2022.<br>
-                        - 9th place in the semicolon show IEEE Al-Azhar University<br>
-                        - Participated in the 2021 Egyptian Collegiate Programming Contest.<br>
-                        - 1st Place in the 2021 MAM Collegiate Programming Contest | 16 teams participated. <br>
+                        • Judge for the 2024 Egyptian Collegiate Programming Contest.<br>
+                        • 100th Place in the 2023 Africa and Arab Collegiate Programming Contest. <br>
+                        • 3x ECPC (Egyptian Collegiate Programming Contest) finalist. <br>
+                        • 1st Place in the MAM Collegiate Programming Contest (2021, 2022, 2023) . <br>
+                        • 273rd Place in the 2022 ACPC Kickoff Individual Contest | 800 teams participated. <br>
+                        • Participated in Meta Hacker Cup 2022.<br>
+                        • 20th Place in OSC Hotaru 1.0 Programming Contest | 120 teams participated.<br>
+                        • 9th place in the semicolon show IEEE Al-Azhar University<br>
                         Ref: For ICPC contributions: check:
                         <a href="https://icpc.global/ICPCID/76Q92CA656V9" target="_blank">full ICPC record</a>.
                     </p>
